--- a/sc_server_django/server/uwsgi/local.ini
+++ b/sc_server_django/server/uwsgi/local.ini
@@ -1,9 +1,8 @@
 [uwsgi]
-chdir = %d/../..
+http = :8000
+chdir = %d/../../
 virtualenv = ..
-enable-threads = true
-max-requests = 5000
+pythonpath = ..
 file = wsgi.py
-socket = uwsgi.sock
-chmod = 660
-check-static = _site
+; this file is meant to run something similar to runserver
+; ; Further options available at http://uwsgi-docs.readthedocs.org/en/latest/Options.html
