Updates to config files for deployment

--- a/sc_server_django/server/nginx/production.conf
+++ b/sc_server_django/server/nginx/production.conf
@@ -1,7 +1,7 @@
 server {
     set $maintenance 0;
-    set $project_root /home/devuser/sites/studycentric-env/django-server;
-    set $site_root $project_root/_site;
+    set $project_root /home/devuser/webapps/studycentric-env/studycentric/sc_server_django;
+    set $site_root $project_root/../client;
 
     listen          80;
     server_name     studycentric.com;
