--- a/sc_server_django/server/uwsgi/local.ini
+++ b/sc_server_django/server/uwsgi/local.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 http = :8000
 chdir = %d/../../
-virtualenv = ..
+virtualenv = ../..
 pythonpath = ..
 file = wsgi.py
 ; this file is meant to run something similar to runserver
