--- a/sc_server_django/server/uwsgi/production.ini
+++ b/sc_server_django/server/uwsgi/production.ini
@@ -1,8 +1,9 @@
 [uwsgi]
 chdir = %d/../..
-virtualenv = ..
+virtualenv = ../..
 enable-threads = true
 max-requests = 5000
 file = wsgi.py
 socket = uwsgi.sock
 chmod = 660
+chown-socket = devuser:nginx
