--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ _site/static
 # Do not version user uploaded content since these files might be huge.
 # Have another strategy for backing up this content.
 _site/media
+env_var_chop
