--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@ _site/static
 # Do not version user uploaded content since these files might be huge.
 # Have another strategy for backing up this content.
 _site/media
+env_vars_chop
 env_var_chop
